# lolsynergies_server_in_rust

./: Cargo.toml  Procfile  notes.md
src/: definitions.rs  functions.rs  main.rs  utils.rs
