[package]
name = "lolsynergies_server_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features=["sync", "macros"] }
dotenv = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
actix-web = "4"
futures = "0.3.21"

[profile.dev]
opt-level = 1
incremental = true