[package]
name = "lolsynergies_server_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features=["sync", "macros"] }
dotenv = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
actix-web = "4"
actix-cors = "0.6.1"
futures = "0.3.21"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc}
chrono = "0.4"
